examples/camel-example-spring-boot-rest-jpa/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: rest-jpa-service
spec:
  path:  /api
  port:
    targetPort: rest-jpa-port
  to:
    kind: Service
    name: rest-jpa-service
    weight: 100
  wildcardPolicy: None
